syntax = "proto3";

package com.fanaujie.ripple.protobuf;

option java_multiple_files = true;
option java_package = "com.fanaujie.ripple.protobuf.wsmessage";
import "MessageGateway.proto";


message WsMessage {
  oneof message_type {
    HeartbeatRequest heartbeat_request = 1;
    HeartbeatResponse heartbeat_response = 2;
    PushMessageRequest push_message_request = 3;
  }
}

message HeartbeatRequest {
  string user_id = 1;
  int64  timestamp = 2;
}

message HeartbeatResponse {
  string user_id = 1;
  int64  client_timestamp = 2;
  int64  server_timestamp = 3;
}